--- a/zuper-app/package.json
+++ b/zuper-app/package.json
@@ -25,7 +25,8 @@
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "vercel": "^41.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
